--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,13 @@
 RewriteEngine on
 
-# Redirect to domain without www.
+# Redirect to domain with www.
 RewriteCond %{HTTPS} off
-RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-RewriteRule .* http://%1%{REQUEST_URI} [R=301,L]
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule .* http://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 # Same for HTTPS:
 RewriteCond %{HTTPS} on
-RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-RewriteRule .* https://%1%{REQUEST_URI} [R=301,L]
+RewriteCond %{HTTP_HOST} !^www\. [NC]
+RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 # Redirect to another domain: kar.cat.
 RewriteCond %{HTTPS} off
